<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
        >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Saint Petersburg"
            android:id="@+id/cityName" android:layout_gravity="left|center_vertical" android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large" android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp" android:layout_alignParentTop="true" android:layout_marginTop="0dp"
            android:padding="8dp" android:background="@color/light_blue" android:textColor="@color/white"
            android:layout_marginBottom="5dp"/>
    <LinearLayout
            android:id="@+id/tempDataLayout"
            android:layout_below="@id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mock_temp"
                android:id="@+id/temperature"

                android:textAppearance="@android:style/TextAppearance.Large" android:gravity="center"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/celsius"
                android:id="@+id/celsius"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:gravity="center"/>
        <ImageView
                android:layout_width="64px"
                android:layout_height="64px"
                android:id="@+id/weatherIcon"
                android:layout_gravity="center_vertical"
                android:src="@drawable/unknown" android:layout_marginLeft="5dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:id="@+id/btnRefresh" android:layout_toRightOf="@+id/observationTime"
                android:layout_below="@+id/textView4" android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:id="@+id/textView" android:layout_alignLeft="@+id/tempDataLayout"
            android:layout_below="@id/tempDataLayout" android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_pressure"
            android:id="@+id/pressure" android:layout_toRightOf="@+id/textView"
            android:layout_below="@+id/tempDataLayout" android:layout_marginLeft="15dp" android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmhg"
            android:id="@+id/textView2"
            android:layout_toRightOf="@+id/pressure" android:layout_below="@+id/tempDataLayout"
            android:layout_marginLeft="3dp" android:paddingTop="5dp" android:paddingRight="5dp"
            android:paddingBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:id="@+id/textView3" android:layout_alignLeft="@+id/tempDataLayout"
            android:layout_below="@+id/textView" android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_humidity"
            android:id="@+id/humidity" android:layout_alignLeft="@+id/pressure" android:layout_below="@+id/textView"
            android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:id="@+id/textView1"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@id/humidity" android:layout_marginLeft="3dp" android:paddingTop="5dp"
            android:paddingRight="5dp" android:paddingBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:id="@+id/textView4" android:layout_alignLeft="@+id/tempDataLayout"
            android:layout_below="@+id/textView3" android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dir_N"
            android:id="@+id/windDir" android:layout_alignLeft="@+id/pressure" android:layout_below="@+id/textView3"
            android:padding="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_windspeed"
            android:id="@+id/windSpeed" android:layout_toRightOf="@+id/windDir"
            android:layout_below="@+id/textView3" android:layout_marginLeft="5dp" android:paddingTop="5dp"
            android:paddingRight="5dp" android:paddingBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kmph"
            android:id="@+id/textView5"
            android:layout_toRightOf="@+id/windSpeed" android:layout_below="@+id/textView3"
            android:layout_marginLeft="3dp" android:paddingTop="5dp" android:paddingRight="5dp"
            android:paddingBottom="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observation_time"
            android:id="@+id/textView6"
            android:layout_below="@id/textView4"
            android:padding="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mock_time"
            android:layout_marginLeft="5dp"
            android:id="@+id/observationTime"
            android:layout_below="@id/textView4"
            android:layout_toRightOf="@id/textView6"
            android:padding="5dp"/>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forecast" android:layout_alignLeft="@+id/cityName" android:layout_below="@+id/textView6"/>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"/>
</RelativeLayout>